<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MelbourneFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/melbourneDayOfWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/melbourneHead"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:fontFamily="casual"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:weightSum="2"
                android:layout_marginStart="15dp">

                <TextView
                    android:id="@+id/melbourneActualTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp" />

                <ImageView
                    android:id="@+id/melbourneWeatherIcon"
                    android:layout_width="8dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:contentDescription="@string/weather_icon" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:weightSum="2"
                android:layout_marginStart="15dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="@string/max_temp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp" />
                    <TextView
                        android:id="@+id/melbourneMaxTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="@string/min_temp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp" />
                    <TextView
                        android:id="@+id/melbourneMinTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:weightSum="3"
                android:layout_marginStart="15dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="10dp" />
                    <TextView
                        android:id="@+id/melbourneHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="10dp" />
                    <TextView
                        android:id="@+id/melbourneWeatherState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/predictability"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="10dp" />
                    <TextView
                        android:id="@+id/melbournePredictability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="10dp" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="18dp"
                android:weightSum="5">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/melbourneRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>